--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <script src=https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.0.2/mapbox-gl-directions.js></script>
 <link rel="stylesheet" href=https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.0.2/mapbox-gl-directions.css type="text/css" />
 
-<link rel="stylesheet" href="css/bootstrap.css">
+<link rel="stylesheet" href="bootstrap.css">
 <style>
     :root {
         --main-color:#156504;
